viewsource.css: Fix viewsource elem not always covering the whole page

--- a/src/static/viewsource.css
+++ b/src/static/viewsource.css
@@ -8,6 +8,7 @@
   background: white !important;
   white-space: pre !important;
   min-width: 100% !important;
+  min-height: 100% !important;
 }
 
 #TridactylViewsourceElement.dark {
